--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,67 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body {
+  font-family: Arial, sans-serif;
+  background-color: #f4f4f4;
+  padding: 20px;
+ }
+ 
+ .shopping-list {
+  max-width: 550px;
+  margin: auto;
+  border: 1px solid #ddd;
+  padding: 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+ }
+ 
+ .shopping-item, .shopping-list-input {
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  margin-bottom: 10px;
+  padding: 10px;
+  border: 1px solid #ddd;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+ }
+
+ .shopping-list-input {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 10px;
+  padding: 0 10px 0 0;
+  border: 1px solid #ddd;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+ }
+
+ .shopping-list-input input{
+  font-size: 16px;
+  padding: 10px;
+  border: none;
+  background: none;
+  flex-grow: 1;
+ }
+
+ .shopping-list-input input:nth-of-type(2){
+  flex-grow: 0.2;
+  margin: 0 15px 0 0;
+  border-left: 1px solid #ddd;
+ }
+
+ .shopping-item .info {
+  margin-left: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 50%;
+ }
+ 
+ button {
+  background-color: #007BFF;
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+  border: none;
+  padding: 5px 10px;
+  cursor: pointer;
+ }
+ 
+ .shopping-item button:hover {
+  background-color: #0056b3;
+ }
